# yunyu-brief

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: daily.yml
.kiro/specs/daily-briefing-agent/: design.md
examples/: demo_output.json
scripts/: test_twikit.py
src/: __init__.py  agent.py  config.py  main.py  models.py  summarizer.py  twitter_agent.py  twitter_summarizer.py
src/llm/: __init__.py  base.py  openai_compatible.py
src/sinks/: __init__.py  base.py  email.py
src/sources/: __init__.py  base.py  gmail.py
src/sources/twitter/: __init__.py  models.py  source.py
src/sources/twitter/scrapers/: __init__.py  base.py  nitter_scraper.py  official_api.py  twikit_scraper.py  twscrape_scraper.py
src/templates/: briefing.html  briefing.txt  twitter_briefing.html  twitter_briefing.txt  twitter_email_digest.html  twitter_h5.html
tests/: test_smoke.py
