[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "paperboy"
version = "1.0.0"
description = "Your AI paperboy — turns newsletter chaos into a 30-second morning briefing."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "guduzhixing" }]
keywords = ["agent", "llm", "gmail", "newsletter", "productivity", "qwen", "automation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications :: Email",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "imap-tools>=1.6",
    "openai>=1.40",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "python-dotenv>=1.0",
    "httpx>=0.27",
    "twikit>=2.0",
]

[project.urls]
Homepage = "https://github.com/guduzhixing/hello_world"
Issues = "https://github.com/guduzhixing/hello_world/issues"

[project.scripts]
paperboy = "src.main:cli"

[tool.hatch.build.targets.wheel]
packages = ["src"]
